Update to 1.19, Add Kluzzio to Credits  - Pushing updates is important...